SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/scss/components/_soe_beans.scss
+++ b/scss/components/_soe_beans.scss
@@ -384,21 +384,21 @@
     }
   }
 
-  .bean-stanford-postcard .group-s-postcard {
-    display: block;
-    padding: 0;
-
-    .postcard-content {
-      width: auto;
-      padding: 0;
-    }
-
-    .postcard-image img {
-      width: 100%;
-    }
-  }
-
   .bean-stanford-postcard {
+    .group-s-postcard {
+      display: block;
+      padding: 0;
+
+      .postcard-content {
+        width: auto;
+        padding: 0;
+      }
+
+      .postcard-image img {
+        width: 100%;
+      }
+    }
+
     h2 {
       font-size: 28px;
       margin-top: 10px;
